--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
+  "homepage": "https://davi-quirino.github.io/calculator",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
@@ -25,7 +26,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "homepage": "https://davi-quirino.github.io/calculator"
   },
   "eslintConfig": {
     "extends": [
