--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
-  "homepage": "https://davi-quirino.github.io/calculator",
+  "homepage": "https://Daniel-Quirino.github.io/calculator",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
