--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": ".",
+  "homepage": "https://davi-quirino.github.io/filho/",
   "name": "calculator-app",
   "version": "0.1.0",
   "private": true,
